port: backport menu builder, internal inv host, math.clamp for 1.20.1
- Reimplement 1.21's MenuTypeBuilder.buildUnregistered via mixin accessors and
  Ae2ltMenuBuilder helper so menus stay in our own DeferredRegister namespace.
- Expose AEBaseMenu.isPlayerSideSlot via mixin invoker (private in 1.20.1).
- Switch InternalInventoryHost back to saveChanges()/onChangeInventory(InternalInventory,int).
- Loosen FrequencyBindingHost return type to AENetworkBlockEntity to cover
  InterfaceBlockEntity / PatternProviderBlockEntity descendants.
- Replace Math.clamp (Java 21) with manual min/max clamps.